force-app/main/default/objects/OpportunityLineItem/fields/Approval_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval Level Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>