force-app/main/default/objects/OpportunityLineItem/fields/Approval_Level_Required_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Free_Months__c</fullName>
    <formula>IF( Opportunity.Owner.Approval_Exempt__c = true , 0 ,
	IF( Number_of_Free_Months__c &gt; 
		MAX(Approved_Free_Months__c, PricebookEntry.Level_2_Limit_Free_Months__c ) , 3 , 
		IF( Number_of_Free_Months__c &gt; 
			MAX(Approved_Free_Months__c, PricebookEntry.Level_1_Limit_Free_Months__c ) , 2 , 
			IF( Number_of_Free_Months__c &gt; 
				MAX(Approved_Free_Months__c, PricebookEntry.Level_0_Limit_Free_Months__c ) , 1 , 0
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Required - Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>