force-app/main/default/objects/OpportunityLineItem/fields/Approval_Level_Required_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Price_Discount__c</fullName>
    <formula>IF( Opportunity.Owner.Approval_Exempt__c = true , 0 ,
	IF( List_Price_Override__c &gt; 0 ,
		IF( UnitPrice &gt;= /*If the price discount is less than level 1 threshold, 0 Approval Level*/ 
			(List_Price_Override__c - 
				(List_Price_Override__c * 
					MAX( Approved_Price_Discount__c,PricebookEntry.Level_0_Limit_Price_Discount__c )
				)
			) , 0 ,
			IF( UnitPrice &gt;= 
				(List_Price_Override__c - 
					(List_Price_Override__c * 
						MAX( Approved_Price_Discount__c, PricebookEntry.Level_1_Limit_Price_Discount__c )
					)
				) , 1 ,
				IF( UnitPrice &gt;= 
					(List_Price_Override__c - 
						(List_Price_Override__c * 
							MAX( Approved_Price_Discount__c, PricebookEntry.Level_2_Limit_Price_Discount__c )
						)
					) , 2 , 3
				)
			)
		)  ,
		IF( UnitPrice &gt;= 
			(PricebookEntry.UnitPrice - 
				(PricebookEntry.UnitPrice * 
					MAX( Approved_Price_Discount__c, PricebookEntry.Level_0_Limit_Price_Discount__c )
				)
			) , 0 ,
			IF( UnitPrice &gt;= 
				(PricebookEntry.UnitPrice - 
					(PricebookEntry.UnitPrice * 
						MAX( Approved_Price_Discount__c, PricebookEntry.Level_1_Limit_Price_Discount__c )
					)
				) , 1 ,
				IF( UnitPrice &gt;= 
					(PricebookEntry.UnitPrice - 
						(PricebookEntry.UnitPrice * 
							MAX( Approved_Price_Discount__c, PricebookEntry.Level_2_Limit_Price_Discount__c )
						)
					) , 2,  3
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Required - Price Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>