force-app/main/default/objects/OpportunityLineItem/fields/Approval_Level_Required_Term1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Term1__c</fullName>
    <label>Approval Level Required - Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>