force-app/main/default/objects/OpportunityLineItem/fields/Approval_Level_Required_Trial__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Trial__c</fullName>
    <formula>IF( Opportunity.Owner.Approval_Exempt__c = true , 0 ,
	IF( VALUE(TEXT( Trial__c)) &gt; 
		MAX( Approved_Trial__c, PricebookEntry.Level_2_Limit_Trial__c ) , 3 , 
		IF( VALUE(TEXT( Trial__c)) &gt; 
			MAX( Approved_Trial__c, PricebookEntry.Level_1_Limit_Trial__c ) , 2 , 
			IF( VALUE(TEXT( Trial__c)) &gt; 
				MAX( Approved_Trial__c, PricebookEntry.Level_0_Limit_Trial__c ) , 1 , 0
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Required - Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>