force-app/main/default/objects/OpportunityLineItem/fields/Approved_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Approved_Free_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approved - Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>