force-app/main/default/objects/OpportunityLineItem/fields/Approved_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approved - Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>