force-app/main/default/objects/OpportunityLineItem/fields/Base_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Base_Contract_Term__c</fullName>
    <label>Base Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>