force-app/main/default/objects/OpportunityLineItem/fields/Co_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Co_Terminate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Opportunity Product should be forced to co-terminate with all other Opportunity Products, regardless of free months.</description>
    <inlineHelpText>Determines if the Opportunity Product should be forced to co-terminate with all other Opportunity Products, regardless of free months.</inlineHelpText>
    <label>Co-Terminate</label>
    <type>Checkbox</type>
</CustomField>