force-app/main/default/objects/OpportunityLineItem/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <formula>$Setup.Healthgrades_Contract_URL__c.Contract_URL__c &amp; &quot;/HealthgradesContractReview?id=&quot; &amp; Provider__r.Id &amp; &quot;&amp;oppId=&quot; &amp;  OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract URL</label>
    <type>Text</type>
</CustomField>