force-app/main/default/objects/OpportunityLineItem/fields/Current_SR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_SR_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current SR Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Opportunity Product (Current SR Subscription)</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>