force-app/main/default/objects/OpportunityLineItem/fields/Free_Month_Setting__c.field-meta.xml
<CustomField>
    <fullName>Free_Month_Setting__c</fullName>
    <description>Override opportunity free months</description>
    <label>Orientation Month Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extend Contract - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period - At the Beginning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>