force-app/main/default/objects/OpportunityLineItem/fields/HG_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HG_Monthly_Revenue__c</fullName>
    <label>HG Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>