force-app/main/default/objects/OpportunityLineItem/fields/Is_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Is_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled revenue is monthly</description>
    <label>Is Monthly</label>
    <type>Checkbox</type>
</CustomField>