force-app/main/default/objects/OpportunityLineItem/fields/Is_Promo_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Promo_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Promo Item</label>
    <type>Checkbox</type>
</CustomField>