force-app/main/default/objects/OpportunityLineItem/fields/Modified_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Modified_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Opportunity Product (Modified Subscription)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>