force-app/main/default/objects/OpportunityLineItem/fields/Number_of_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Free_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Override opportunity free months</description>
    <inlineHelpText>Override opportunity free months</inlineHelpText>
    <label>Number of Orientation Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>