force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Approval_Change__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approval_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Approval Change</label>
    <type>Checkbox</type>
</CustomField>