force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>