force-app/main/default/objects/OpportunityLineItem/fields/Other_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Revenue__c</fullName>
    <label>Other Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>