force-app/main/default/objects/OpportunityLineItem/fields/Override_Current_SR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Override_Current_SR_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Current SR Subscription</label>
    <type>Checkbox</type>
</CustomField>