force-app/main/default/objects/OpportunityLineItem/fields/Override_Modified_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Override_Modified_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Modified Subscription</label>
    <type>Checkbox</type>
</CustomField>