force-app/main/default/objects/OpportunityLineItem/fields/Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount__c</fullName>
    <formula>IF( List_Price_Override__c &gt; 0 , 
IF( List_Price_Override__c = 0 , 0 , (List_Price_Override__c - UnitPrice) / List_Price_Override__c) ,
IF( PricebookEntry.UnitPrice = 0 , 0 , (PricebookEntry.UnitPrice - UnitPrice) / PricebookEntry.UnitPrice))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>