force-app/main/default/objects/OpportunityLineItem/fields/Product_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Formula__c</fullName>
    <label>Product Code Formula</label>
    <length>20</length>
    <type>Text</type>
</CustomField>