force-app/main/default/objects/OpportunityLineItem/fields/Product_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Value__c</fullName>
    <description>Stores the Product Code, needed for a Summary Roll up Field on the Opportunity.</description>
    <label>Product Code Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>