force-app/main/default/objects/OpportunityLineItem/fields/Product_Family_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Duplicate__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Set via Apex.  Creates a key with Opportunity Id and Product Family so that only one Product from each Family can be added to an Opportunity.</description>
    <label>Product Family Duplicate</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>