force-app/main/default/objects/OpportunityLineItem/fields/Promotional_Price__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Price__c</fullName>
    <description>Allows for giving promotional months at a discounted price.</description>
    <label>Orientation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>