force-app/main/default/objects/OpportunityLineItem/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Provider for the Healthgrades Premium Profile</description>
    <inlineHelpText>The related Provider for the Healthgrades Premium Profile</inlineHelpText>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>