force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Activation_Fee_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Activation_Fee_Price__c</fullName>
    <inlineHelpText>Price Book unit price of the Activation Fee Product.</inlineHelpText>
    <label>Activation Fee Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>