force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Activation_Fee_Product__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Activation_Fee_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Activation fee product used in Master Subscription process.</inlineHelpText>
    <label>Activation Fee Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>