force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Addendum_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Addendum_Type__c</fullName>
    <label>Addendum Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS-01: Purchase Additional Quantity (No Price Change)</fullName>
            </value>
            <value>
                <fullName>AS-02: Increase/Decrease Source Quantity and Price</fullName>
            </value>
            <value>
                <fullName>AS-03: Purchase New Product</fullName>
            </value>
            <value>
                <fullName>AS-04: Purchase New Product and Change Source Subscription Price</fullName>
            </value>
            <value>
                <fullName>AS-05: Product Upgrade: Replace Product</fullName>
            </value>
            <value>
                <fullName>AS-06: Product Downgrade: Replace Product</fullName>
            </value>
            <value>
                <fullName>AS-07: Product Downgrade: Decrease Product Quantity</fullName>
            </value>
            <value>
                <fullName>AS-08: User Defined</fullName>
            </value>
            <value>
                <fullName>AS-09: Change Subscription Bill-to Account/Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>