force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Aggregated_Monthly_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Aggregated_Monthly_Minimum_Amount__c</fullName>
    <formula>PricebookEntry.Product2.RecurSoft__Aggregated_Monthly_Minimum_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The usage for this product is billed based on Aggregated Monthly Minimum Amount logic.</inlineHelpText>
    <label>Aggregated Monthly Minimum Amount</label>
    <type>Checkbox</type>
</CustomField>