force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Billing_dependent_on_imp_stat_new__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_dependent_on_imp_stat_new__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if invoicing for this opportunity product should be based on later Activation date.</inlineHelpText>
    <label>Billing dependent on IMP (transactional)</label>
    <type>Checkbox</type>
</CustomField>