force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Frequency__c</fullName>
    <formula>IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;One-Time&quot;), &quot;One-Time&quot;,
IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;Monthly&quot;), &quot;Monthly&quot;,
IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;Quarterly&quot;), &quot;Quarterly&quot; ,
IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;Semi-Annual&quot;), &quot;Semi-Annual&quot;,
IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;Yearly&quot;), &quot;Yearly&quot; ,
IF (ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &quot;Milestones&quot;), &quot;Milestones&quot; , &quot;&quot;
)
)
)
)
)
)</formula>
    <inlineHelpText>Default billing frequency of the product.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>