force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Billing_Frequency_New__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Frequency_New__c</fullName>
    <inlineHelpText>Billing frequency of the opportunity product.</inlineHelpText>
    <label>Billing frequency (transactional)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>