force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Bundled_Product__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Bundled_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product is part of a bundle on the originating opportunity.</description>
    <label>Bundled Product</label>
    <type>Checkbox</type>
</CustomField>