force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Child_Subscription_Renewal_Rule__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Child_Subscription_Renewal_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used in Master Subscription process.</inlineHelpText>
    <label>Child Subscription Renewal Rule</label>
    <referenceTo>RecurSoft__Renewal_Rule__c</referenceTo>
    <relationshipLabel>Opportunity Product (Child Subscription Renewal Rule)</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>