force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Co_Termination__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Co_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sets the Contract Term End Date as per original/source subscription.</inlineHelpText>
    <label>Co-Termination</label>
    <type>Checkbox</type>
</CustomField>