force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Contract_Term1__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term1__c</fullName>
    <inlineHelpText>Contract duration.</inlineHelpText>
    <label>Contract Term</label>
    <length>15</length>
    <type>Text</type>
</CustomField>