force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Contract_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_End_Date__c</fullName>
    <formula>DATE(
year(RecurSoft__Contract_Term_Start_Date_New__c)+ floor((month(RecurSoft__Contract_Term_Start_Date_New__c) + VALUE(RecurSoft__Contract_Term1__c))/12) + if(and(month(RecurSoft__Contract_Term_Start_Date_New__c)=12,VALUE(RecurSoft__Contract_Term1__c)&gt;=12),-1,0)
,if( mod( month(RecurSoft__Contract_Term_Start_Date_New__c) + VALUE(RecurSoft__Contract_Term1__c) , 12 ) = 0, 12 , mod( month(RecurSoft__Contract_Term_Start_Date_New__c) + VALUE(RecurSoft__Contract_Term1__c) , 12 ))
,min(day(RecurSoft__Contract_Term_Start_Date_New__c),case(max( mod( month(RecurSoft__Contract_Term_Start_Date_New__c) + VALUE(RecurSoft__Contract_Term1__c) , 12 ) , 1),9,30,4,30,6,30,11,30,2,28,31))
)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - Contract Term End Date</label>
    <type>Date</type>
</CustomField>