force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Contract_Term_End_Date_Editable__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_End_Date_Editable__c</fullName>
    <label>Contract Term End Date</label>
    <type>Date</type>
</CustomField>