force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Contract_Term_Setting__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_Setting__c</fullName>
    <inlineHelpText>Contract duration options: months, days.</inlineHelpText>
    <label>Contract Term Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>