force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Contract_Term_Start_Date_New__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_Start_Date_New__c</fullName>
    <label>Contract Term Start Date</label>
    <type>Date</type>
</CustomField>