force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Counter_Aggregated_Monthly_Min__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Counter_Aggregated_Monthly_Min__c</fullName>
    <label>DeprecatedCounter Aggregated Monthly Min</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>