force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__CPI__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__CPI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the Consumer Price Index is applied to to the product price.</inlineHelpText>
    <label>CPI</label>
    <type>Checkbox</type>
</CustomField>