force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Create_Implementation_Case__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Create_Implementation_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate an Implementation case is desired for this product. It is only necessary to use on one-time revenue products.</description>
    <inlineHelpText>Used to indicate an Implementation case is desired for this product. It is only necessary to use on one-time revenue products.</inlineHelpText>
    <label>Deprecated - Create Implementation Case</label>
    <type>Checkbox</type>
</CustomField>