force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Discount_from_List_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Discount_from_List_Price__c</fullName>
    <formula>IF(ListPrice  &lt;&gt; 0,( ListPrice  -   UnitPrice  ) / ListPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The discount in the final Sales Price.</inlineHelpText>
    <label>Discount % from List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>