force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Intacct_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Customer_ID__c</fullName>
    <formula>Opportunity.RecurSoft__Intacct_Customer_ID__c</formula>
    <inlineHelpText>Corresponding Intacct ID. Updated via Intacct sync.</inlineHelpText>
    <label>Intacct Customer ID</label>
    <type>Text</type>
</CustomField>