force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Intacct_Item_ID_form__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Item_ID_form__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Intacct product ID/code.</inlineHelpText>
    <label>Intacct Item ID</label>
    <type>Text</type>
</CustomField>