force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Intacct_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Vendor_ID__c</fullName>
    <formula>RecurSoft__Vendor__r.RecurSoft__Intacct_Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Vendor ID</label>
    <type>Text</type>
</CustomField>